--- a/gopath/src/griefly-server/CMakeLists.txt
+++ b/gopath/src/griefly-server/CMakeLists.txt
@@ -1,3 +1,5 @@
+message(STATUS "Running server CMakeLists.txt...")
+
 find_package(Go 1.5 REQUIRED)
 message(STATUS "Go has been found, version: ${GO_VERSION}")
 
@@ -12,3 +14,5 @@ add_custom_command(
     COMMAND ${CMAKE_COMMAND} -E env GOPATH=${GOPATH} GO15VENDOREXPERIMENT=1 ${GO_EXECUTABLE} build -ldflags "-X main.clientVersionBuild=${CLIENT_VERSION}"
     DEPENDS ${GOFILES})
 add_custom_target(GoServer ALL DEPENDS ${SERVER_DIR}/griefly-server${CMAKE_EXECUTABLE_SUFFIX} SOURCES ${GOFILES})
+
+message(STATUS "Running server CMakeLists.txt...")
