--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ compiler: gcc
 
 before_install:
   - export CXX="g++-4.9"
-  - export PATH=$PYENV_ROOT/bin:$PATH
+  - source ~/virtualenv/python3.5/bin/activate
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
     export CXX="g++-5";
     fi
@@ -30,7 +30,6 @@ install:
     sudo apt-get install -y lcov;
     sudo apt-get install -y mesa-common-dev;
     sudo apt-get install -y libglu1-mesa-dev;
-    sudo apt-get install -y python3;
     gem install coveralls-lcov;
     sudo /opt/qt59/bin/qt59-env.sh;
     export CMAKE_PREFIX_PATH=/opt/qt59/;
