--- a/.travis.yml
+++ b/.travis.yml
@@ -38,14 +38,14 @@ install:
     
 before_script:
   - "export DISPLAY=:99.0"
-  - if [[ "${TRAVIS_OS_NAME}" = "osx" ]]; then ( sudo Xvfb :99 -ac -screen 0 1024x768x8; echo ok )& fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ( sudo Xvfb :99 -ac -screen 0 1024x768x8; echo ok )& fi
   
 script:
-  - if [[ "${TRAVIS_OS_NAME}" = "osx" ]]; then
+  - if [[ "$TRAVIS_OS_NAME" == "osx"]]; then
     ./make.sh -DBUILD_TESTS=ON -DBUILD_COVER=ON -DCMAKE_BUILD_TYPE=Debug;
     cd exec;
     ./KVEngine --run-tests;
     fi
-  - if [[ "${TRAVIS_OS_NAME}" = "linux" ]]; then
-    docker run -v $TRAVIS_BUILD_DIR:/app -e COVERALLS_REPO_TOKEN="${COVERALLS_REPO_TOKEN}" kremius/griefly-build /app/build-in-docker.sh
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+    docker run -v $TRAVIS_BUILD_DIR:/app -e COVERALLS_REPO_TOKEN="${COVERALLS_REPO_TOKEN}" kremius/griefly-build /app/build-in-docker.sh;
     fi
