--- a/.travis.yml
+++ b/.travis.yml
@@ -48,10 +48,11 @@ script:
     fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
     docker run -v $TRAVIS_BUILD_DIR:/app
-    -e TRAVIS=$TRAVIS
-    -e TRAVIS_JOB_ID=$TRAVIS_JOB_ID
-    -e TRAVIS_PULL_REQUEST=$TRAVIS_PULL_REQUEST
-    -e TRAVIS_BRANCH=$TRAVIS_BRANCH
-    -e COVERALLS_REPO_TOKEN=$COVERALLS_REPO_TOKEN
+    -e TRAVIS
+    -e TRAVIS_REPO_SLUG
+    -e TRAVIS_JOB_ID
+    -e TRAVIS_PULL_REQUEST
+    -e TRAVIS_BRANCH
+    -e COVERALLS_REPO_TOKEN
     kremius/griefly-build /app/build-in-docker.sh;
     fi
