Coverall token variable change & more strict mode #462

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,6 @@ script:
     -e TRAVIS_JOB_ID
     -e TRAVIS_PULL_REQUEST
     -e TRAVIS_BRANCH
-    -e COVERALLS_REPO_TOKEN
+    -e COVERALLS_TOKEN
     kremius/griefly-build /app/build-in-docker.sh;
     fi
