--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,9 @@ install:
     brew install gimme;
     eval "$(gimme 1.9)";
     brew install qt;
-    brew install python3;
+    brew upgrade python;
     brew info qt;
-    brew info python3;
+    brew info python;
     export PATH="/usr/local/opt/qt/bin:$PATH";
     export LDFLAGS="-L/usr/local/opt/qt/lib";
     export CPPFLAGS="-I/usr/local/opt/qt/include";
