Helper project for extracting metadata from game to json has been added #280

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,8 @@ add_subdirectory(utils/launcher)
 set(SOURCES_PATH "../../sources/")
 add_subdirectory(utils/qzip_unpacker)
 
+add_subdirectory(utils/basic_assets_generator)
+
 # Building server
 set(GOPATH ${CMAKE_CURRENT_SOURCE_DIR}/gopath)
 add_subdirectory(${GOPATH}/src/griefly-server)
