Iterating over metadata #280

--- a/utils/basic_assets_generator/CMakeLists.txt
+++ b/utils/basic_assets_generator/CMakeLists.txt
@@ -13,4 +13,7 @@ add_executable(${PROJECT_NAME} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} KVEngine)
 target_link_libraries(${PROJECT_NAME} Qt5::Core)
 
+install(TARGETS ${PROJECT_NAME}
+        DESTINATION "${KV_INSTALL_PATH}")
+
 message(STATUS "Finished ${PROJECT_NAME} CMakeLists.txt")
