Forms support in map editor project #280

--- a/utils/map_editor/CMakeLists.txt
+++ b/utils/map_editor/CMakeLists.txt
@@ -4,11 +4,14 @@ message(STATUS "Running ${PROJECT_NAME} CMakeLists.txt...")
 
 set(CMAKE_CXX_STANDARD 14)
 
-find_package(Qt5 ${MINIMUM_QT_VERSION} COMPONENTS Core REQUIRED)
+find_package(Qt5 ${MINIMUM_QT_VERSION} COMPONENTS Core Widgets REQUIRED)
 
-file(GLOB_RECURSE SOURCES "*.cpp")
+file(GLOB_RECURSE SOURCES "*.cpp" ".h")
 
-add_executable(${PROJECT_NAME} ${SOURCES})
+file(GLOB_RECURSE FORMS "*.ui")
+qt5_wrap_ui(FORMS_HEADERS ${FORMS})
+
+add_executable(${PROJECT_NAME} ${SOURCES} ${FORMS} ${FORMS_HEADERS})
 
 target_link_libraries(${PROJECT_NAME} Qt5::Core)
 
